--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
     <title>Guadalupe Cisneros</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum|Merriweather|Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="top-container">
+      <img class = "top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Guadalupe</h1>
+      <h3>an Aspiring Software Engineer</h2>
+      <img class= "bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="" alt="">
+        <h2>Hello.</h2>
+        <p>I'm a Computer Science student at California State University of Monterey Bay. I like working on DIY projects.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="" src="" alt="">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="" src="" alt="">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Connect with me on Social Media!</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/g-cisneros/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© 2020 Guadalupe Cisneros.</p>
+    </div>
 
   </body>
 </html>
