--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="profile">
         <img src="" alt="">
         <h2>Hello.</h2>
-        <p>I'm a Computer Science student at California State University of Monterey Bay. I like working on DIY projects.</p>
+        <p>I'm a Computer Science student at California State University of Monterey Bay.</p>
       </div>
       <hr>
       <div class="skills">
