--- a/index.html
+++ b/index.html
@@ -11,45 +11,43 @@
     <div class="top-container">
       <img class = "top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Guadalupe</h1>
-      <h3>an Aspiring Software Engineer</h2>
+      <h3>a Computer Scientist</h2>
       <img class= "bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
         <img src="" alt="">
-        <h2>Hello.</h2>
-        <p>I'm a Computer Science student at California State University of Monterey Bay.</p>
+        <h2>About me</h2>
+        <p class="intro">Hello! I'm a 3rd year Computer Science student at California State University of Monterey Bay I'm currently learning Web Development through a Full Stack Web Development course on Udemy, so this website is work in progress. </p>
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>Experience.</h2>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <img class="experience" src="https://cdn.i-scmp.com/sites/default/files/styles/768x768/public/d8/images/methode/2019/03/16/35e584f4-46f3-11e9-b5dc-9921d5eb8a6d_image_hires_194000.JPG?itok=nVKrf1-W&v=1552736407" alt="coding image">
+          <h3>Intern - Naval Postgraduate School</h3>
+          <p>Developed a C++ plugin for ParaView, to aid in data visualization for a new climate modeling platform that
+provides accurate and actionable scientific information needed to face climate change. Configured Paraview from source using CMake. Translated interpolation code that modifies climate data collected from research, from Python to C++</p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="experience" src="https://nces.ed.gov/programs/coe/images/nav/coe_hp_new.png" alt="education image">
+          <h3>Assistant Instructor - Coder Dojo at Hartnell College</h3>
+          <p>Assisted the Lead Instructor in Saturday coding sessions for 25 elementary school students. Lead two 35-minute labs per session, introducing age and level-appropriate material in Java.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Connect with me on Social Media!</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
         <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
 
-
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/g-cisneros/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2020 Guadalupe Cisneros.</p>
+      <a class="footer-link" href="https://github.com/gcisneros820">GitHub</a>
+      <a class="footer-link" href="https://gcisneros820.github.io/CSS-my-site/">Website</a>
+      <p class="copyright">© 2020 Guadalupe Cisneros.</p>
     </div>
 
   </body>
